kubernetes/apps/matrix/synapse/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: matrix
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: latest
