kubernetes/apps/matrix/synapse/hookshot-legacy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hookshot
  namespace: matrix
spec:
  type: ExternalName
  externalName: synapse-hookshot.matrix.svc.cluster.local
