kubernetes/apps/matrix/synapse/httproute-livekit.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrixrtc
  namespace: matrix
spec:
  parentRefs:
    - name: apps
      namespace: envoy-gateway-system
  hostnames:
    - livekit.kalitsune.net
  rules:
    - matches:
        - path: {type: PathPrefix, value: /get_token}
        - path: {type: PathPrefix, value: /delegate_delayed_leave}
      backendRefs:
        - name: synapse-matrix-rtc-authorisation-service
          port: 8080
    - matches:
        - path: {type: PathPrefix, value: /}
      # The signalling WebSocket stays open; set a high timeout.
      timeouts:
        backendRequest: 3600s
        request: 3600s
      backendRefs:
        - name: synapse-matrix-rtc-sfu
          port: 7880
