kubernetes/apps/matrix/synapse/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synapse
  namespace: matrix
spec:
  parentRefs:
    - name: apps
      namespace: envoy-gateway-system
  hostnames:
    - matrix.kalitsune.net
  rules:
    - matches:
        - path: { type: Exact, value: / }
      filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 302
            hostname: app.element.io
            path:
              type: ReplaceFullPath
              replaceFullPath: /
    - matches:
        - path: { type: Exact, value: /_matrix/client/v3/login }
        - path: { type: Exact, value: /_matrix/client/v3/refresh }
        - path: { type: Exact, value: /_matrix/client/v3/logout }
        - path: { type: Exact, value: /_matrix/client/v1/login }
        - path: { type: Exact, value: /_matrix/client/r0/login }
        - path: { type: Exact, value: /_matrix/client/unstable/login }
      timeouts:
        backendRequest: 180s
        request: 180s
      backendRefs:
        - name: synapse-matrix-authentication-service
          port: 8080
    - matches:
        - path: { type: PathPrefix, value: /_matrix }
        - path: { type: PathPrefix, value: /_synapse }
      timeouts:
        backendRequest: 180s
        request: 180s
      backendRefs:
        - name: synapse-synapse
          port: 8008
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mas
  namespace: matrix
spec:
  parentRefs:
    - name: apps
      namespace: envoy-gateway-system
  hostnames:
    - auth.matrix.kalitsune.net
  rules:
    - timeouts:
        backendRequest: 180s
        request: 180s
      backendRefs:
        - name: synapse-matrix-authentication-service
          port: 8080
